--- a/sv2ray.config.json
+++ b/sv2ray.config.json
@@ -4,21 +4,22 @@
     "error": "/var/log/v2ray/error.log",
     "loglevel": "debug"
   },
-  "inbound": {
+   "inbound": {
    "port": 5541,
     "protocol": "vmess",
     "settings": {
       "clients": [{
       	"id": "0d16f6b3-092b-4f25-b8ec-7dbf5f2f8a9c",
 	    "security": "aes-128-gcm",
-    	"alterId": 64,
+    	"alterId": 64
       }]
     }
   },
   "outbound": {
     "protocol": "freedom",
     "settings": {}
-  },
+  }
+
 
 }
 
