--- a/ssl.config.json
+++ b/ssl.config.json
@@ -2,10 +2,10 @@
       "server": "0.0.0.0",
       "server_port": 6611,
       "local_address":"127.0.0.1",
-      "local_port":1080,
+      "local_port":1087,
       "password": "LSS@123#222@lmm",
       "method": "aes-256-gcm",
-      "plugin": "obfs-local",
-      "plugin_opts": "obfs=http;obfs-host=www.bing.com",
+      "plugin": "obfs-server",
+      "plugin_opts": "obfs=http;",
       "timeout": 60
 }
